--- a/POSProject/MainWindow.xaml
+++ b/POSProject/MainWindow.xaml
@@ -3,10 +3,103 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:POSProject"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        WindowStyle="None"
+        ResizeMode="NoResize"
+        Background="#444">
+
+
     <Grid>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="25"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <!-- Program Bar-->
+        <Grid Background="#0F0F2D" Grid.ColumnSpan="2" >
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+
+
+
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Text="James's CO"
+               Foreground="White"
+               Grid.Column="1"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Center"
+               FontWeight="Medium"
+              />
+
+            <TextBlock Text="{Binding Source={x:Static sys:DateTime.Now}, StringFormat=dd/MM/yyyy}"
+               Foreground="White"
+               Grid.Column="2"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Center"
+               FontWeight="Light"
+              />
+
+
+            <TextBlock Text="{Binding Source={x:Static sys:DateTime.Now}, StringFormat=HH:MM}"
+               Foreground="#db5000"
+               Grid.Column="3"
+               VerticalAlignment="Center"
+               HorizontalAlignment="Center"
+               FontWeight="Light"
+              />
+
+        </Grid>
+
+        <!--Console Panel-->
+        <!--First Column-->
+        <StackPanel Grid.Row="1">
+            <StackPanel Orientation="Horizontal">
+                <Image Width="50" Height="50"/>
+                <TextBlock Text="James's CO"
+                                   Foreground="White"
+                                   FontSize="20"
+                                   FontWeight="Heavy"
+                                   VerticalAlignment="Center"
+                                   />
+                <!--TO DO:
+                    Fonts, buttons, Graphisc, Some Logo-->
+
+
+            </StackPanel>
+
+
+        </StackPanel>
+
+
+
+
+
+
+        <!--Second Column-->
+
+
+
+
 
     </Grid>
 </Window>
