--- a/POSProject/Login.xaml
+++ b/POSProject/Login.xaml
@@ -5,8 +5,80 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:POSProject"
         mc:Ignorable="d"
-        Title="Login" Height="450" Width="800">
+        Title="Login" Height="500" Width="600"
+        WindowStyle="None"
+        ResizeMode="NoResize"
+        Background="#444"
+        FontFamily="Fonts/#Rubik">
     <Grid>
         
+        <Image x:Name="Company_logo" HorizontalAlignment="Center" Height="200" VerticalAlignment="Top" Source="Images/Reustaurant_logo.png" Margin="0,10,0,0"/>
+        <TextBlock Text="Zaloguj się"
+                                   Foreground="White"
+                                   FontSize="20"
+                                   FontWeight="Medium"
+                                   VerticalAlignment="Top"
+                                   Margin="244,250,244,0"/>
+        <Border BorderBrush="Orange" BorderThickness="1"/>
+        <TextBlock Text="Wprowadź swój identyfikator" Margin="215,319,215,152" Background="Transparent" Foreground="#FFF37E15" FontSize="11" TextAlignment="Center"  />
+        
+        <Border BorderBrush="White" BorderThickness="1" Margin="106,227,106,30">
+
+            <PasswordBox FontFamily="Fonts/Rubik"
+                             FontWeight="Light"
+                             
+                             FontSize="20"
+                             HorizontalAlignment="Center"
+                             Foreground="White"
+                             Background="Gray"
+                             BorderThickness="0"
+                             Width="236"
+                             HorizontalContentAlignment="Left"
+                             Opacity="0.7"
+                             Height="25"
+                             Margin="0,108,0,108"/>
+            
+            
+            
+        </Border>
+        <Button x:Name="Run_Button"  
+                Content="Uruchom" 
+                Margin="183,371,182,72"
+                Foreground="White"
+                Background="#FFF37E15"
+                FontWeight="Bold"
+                FontSize="20"
+                >
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Width="200" Height="45"
+                                    CornerRadius="12"
+                                    Background="{TemplateBinding Background}">
+                        <ContentPresenter VerticalAlignment="Center"
+                                                  HorizontalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+
+        </Button>
+        <Button Name="Back"
+                Click="Back_Click"
+            Foreground="White"
+                Background="#FFF37E15"
+                FontWeight="Bold"
+                FontSize="20"
+             Margin="510,10,10,452">
+            <Image Source="Images/Back_arrow.png"/>
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Width="60" Height="40"
+                                    CornerRadius="12"
+                                    Background="{TemplateBinding Background}">
+                        <ContentPresenter VerticalAlignment="Center"
+                                                  HorizontalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
     </Grid>
 </Window>
