--- a/POSProject/Login.xaml
+++ b/POSProject/Login.xaml
@@ -12,7 +12,8 @@
         FontFamily="Fonts/#Rubik">
     <Grid>
         
-        <Image x:Name="Company_logo" HorizontalAlignment="Center" Height="200" VerticalAlignment="Top" Source="Images/Reustaurant_logo.png" Margin="0,10,0,0"/>
+        <Image x:Name="Company_logo" HorizontalAlignment="Center" Height="200" VerticalAlignment="Top" Source="Images/Reustaurant_logo.png" Margin="0,10,0,0"
+               RenderOptions.BitmapScalingMode="Fant" />
         <TextBlock Text="Zaloguj się"
                                    Foreground="White"
                                    FontSize="20"
@@ -68,7 +69,9 @@
                 FontWeight="Bold"
                 FontSize="20"
              Margin="510,10,10,452">
-            <Image Source="Images/Back_arrow.png"/>
+            <Image Source="Images/Back_arrow.png"
+                   RenderOptions.BitmapScalingMode="Fant"
+                   />
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Border Width="60" Height="40"
