--- a/POSProject/Login.xaml
+++ b/POSProject/Login.xaml
@@ -5,24 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:POSProject"
         mc:Ignorable="d"
-        Title="Login" Height="500" Width="600"
-        WindowStyle="None"
+        Title="Zaloguj Się" Height="550" Width="600"
+        WindowStyle="ToolWindow"
         ResizeMode="NoResize"
         Background="#444"
         FontFamily="Fonts/#Rubik">
     <Grid>
-        
-        <Image x:Name="Company_logo" HorizontalAlignment="Center" Height="200" VerticalAlignment="Top" Source="Images/Reustaurant_logo.png" Margin="0,10,0,0"
+
+        <Image x:Name="Company_logo" HorizontalAlignment="Center" Height="200" VerticalAlignment="Top" Source="C:\Users\Jakub\Desktop\Github\POSProject\Images\Reustaurant_logo.png" Margin="0,10,0,0"
                RenderOptions.BitmapScalingMode="Fant" />
         <TextBlock Text="Zaloguj się"
                                    Foreground="White"
                                    FontSize="20"
                                    FontWeight="Medium"
                                    VerticalAlignment="Top"
-                                   Margin="244,250,244,0"/>
+                                   Margin="244,250,233,0"/>
         <Border BorderBrush="Orange" BorderThickness="1"/>
-        <TextBlock Text="Wprowadź swój identyfikator" Margin="215,319,215,152" Background="Transparent" Foreground="#FFF37E15" FontSize="11" TextAlignment="Center"  />
-        
+        <TextBlock Text="Wprowadź swój identyfikator" Margin="215,319,200,152" Background="Transparent" Foreground="#FFF37E15" FontSize="11" TextAlignment="Center"  />
+
         <Border BorderBrush="White" BorderThickness="1" Margin="106,227,106,30">
 
             <PasswordBox FontFamily="Fonts/Rubik"
@@ -38,9 +38,9 @@
                              Opacity="0.7"
                              Height="25"
                              Margin="0,108,0,108"/>
-            
-            
-            
+
+
+
         </Border>
         <Button x:Name="Run_Button"  
                 Content="Uruchom" 
